k3s/homebridge/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homebridge-lb
  namespace: homebridge
spec:
  selector:
    app: homebridge
  hostNetwork: true
  type: LoadBalancer
  loadBalancerIP: 192.168.1.205
---
kind: Service
apiVersion: v1
metadata:
  name: homebridge-svc
  namespace: homebridge
spec:
  type: ClusterIP
  selector:
    app: uptime-kuma
  ports:
  - name: http
    port: 8581
    protocol: TCP
    targetPort: 8581
