k3s/homebridge/ingress-traefik.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebridge-ing-traefik
  namespace: homebridge
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  rules:
  - host: "home.bird.nest"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homebridge-int-svc
            port:
              number: 8581
